SubBt/force-app/main/default/objects/Section__c/Section__c.object-meta.xml
<CustomObject>
    <label>Selection Category</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Selection Categories</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>