SubBt/force-app/main/default/objects/Section__c/fields/Allowance__c.field-meta.xml
<CustomField>
    <fullName>Allowance__c</fullName>
    <inlineHelpText>This is the allowance available for this Category.</inlineHelpText>
    <label>Category Allowance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>