SubBt/force-app/main/default/objects/Section__c/fields/Create_Change_Order_on_Overage__c.field-meta.xml
<CustomField>
    <fullName>Create_Change_Order_on_Overage__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Create Change Order on Overage</label>
    <type>Checkbox</type>
</CustomField>