SubBt/force-app/main/default/objects/Section__c/fields/Date_Approved__c.field-meta.xml
<CustomField>
    <fullName>Date_Approved__c</fullName>
    <inlineHelpText>Date the Selection was Approved and Locked.</inlineHelpText>
    <label>Date Approved</label>
    <type>Date</type>
</CustomField>