SubBt/force-app/main/default/objects/Section__c/fields/Date_Selected__c.field-meta.xml
<CustomField>
    <fullName>Date_Selected__c</fullName>
    <inlineHelpText>Date the Customer made the Selection.</inlineHelpText>
    <label>Date Submitted</label>
    <type>Date</type>
</CustomField>