SubBt/force-app/main/default/objects/Section__c/fields/Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Due_Date__c</fullName>
    <inlineHelpText>Date the Selection need to be completed by they Customer.</inlineHelpText>
    <label>Due Date</label>
    <type>Date</type>
</CustomField>