SubBt/force-app/main/default/objects/Section__c/fields/Locked__c.field-meta.xml
<CustomField>
    <fullName>Locked__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Selections have been made and completed and the Category is locked.</inlineHelpText>
    <label>Locked</label>
    <type>Checkbox</type>
</CustomField>