SubBt/force-app/main/default/objects/Section__c/fields/Parent__c.field-meta.xml
<CustomField>
    <fullName>Parent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Section</label>
    <referenceTo>Section__c</referenceTo>
    <relationshipName>Sections</relationshipName>
    <type>Lookup</type>
</CustomField>