SubBt/force-app/main/default/objects/Section__c/fields/Selection__c.field-meta.xml
<CustomField>
    <fullName>Selection__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Selection Sheet</label>
    <referenceTo>Selection__c</referenceTo>
    <relationshipLabel>Selection Categories</relationshipLabel>
    <relationshipName>Sections</relationshipName>
    <type>Lookup</type>
</CustomField>