SubBt/force-app/main/default/objects/Section__c/fields/Total_Options__c.field-meta.xml
<CustomField>
    <fullName>Total_Options__c</fullName>
    <label>Total Options</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>