SubBt/force-app/main/default/objects/Section__c/fields/Visible_to_Customer__c.field-meta.xml
<CustomField>
    <fullName>Visible_to_Customer__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If this is checked then your customer&apos;s can see this Category.</inlineHelpText>
    <label>Visible to Customer</label>
    <type>Checkbox</type>
</CustomField>