SubBt/force-app/main/default/objects/Section__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Title__c</columns>
    <columns>Date_Approved__c</columns>
    <columns>Date_Selected__c</columns>
    <columns>Due_Date__c</columns>
    <columns>Total_Options__c</columns>
    <columns>Visible_to_Customer__c</columns>
    <columns>Instructions__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>